@startuml
class Game {
   - gameDate: Data
   - player: Player
   - loadedEntities: vector< Enemy >
   - loadedArea: string

   - enemiesDatabase: vector< Enemy* >
   - attacksDatabase: vector< Attack* >
   - weaponsDatabase: vector< Weapon* >
   
   + initGame()
   + mainLoop()
   + input()

   - loadGame()
   - loadEnemies()
   - loadAttacks()
   - loadWeapons()
}

class Battle {
    - player: Player
    - enemy: Enemy
    - turn: unsigned int

    'Receive Player input and determine enemy attack
    + planTurn()
    + executeTurn()
}

enum Direction{
   + UP
   + RIGHT
   + DOWN
   + LEFT
}

struct InventoryItem {
    - item: Item
    - quantity: short
}

struct Vector2D {
    + x: int
    + y: int
}

class Entity{
    - name : string
    - maxHealth: double
    - health : double
    - stamina : double
    - strength : double
    - dexterity : double 'Taxa de regeneração da Stamina
    - equipedWeaponPtr : Weapon*
    - guarding : bool
    - inventory : vector < InventoryItem* >
    - bodyParts: vector < BodyPart >
    - position : Vector2D

    - ITEM_MAX_STACK: const size_t
    - NAME_MAX_SIZE : const size_t
    - BODY_PART_DESC_MAX_SIZE: const size_t
    - DEFAULT_NAME: string

    + move( Direction )
    + equipWeapon( const Weapon& )
    + attack( Entity&, Attack& ) const
    + receiveDamage( double )
    + calculateDamageModifier(): double
    + heal( double )
    + guard()
    + grabItem( const Item& )
    + useItem( Item& )
    + useItem( size_t )
   
    + showInventory()
    + chooseRandBodyPart(): const BodyPart&

    + isUnarmed()  const : bool
    + isGuarding() const : bool

    ' Aqui, a função pode simplesmente atribuir a um atributo privado direto, sem precisar retornar
    - copyInventory( const vector <InventoryItem> ) const
    - copyWeapon( const Weapon* const ) const
    - isBodyPartValid( BodyPart& ): bool
}

class Player {
    - numPlayers : uint
    - attacks : vector< Attack* >

    + receiveInput()
    + addAttack( Attack& )

    - copyAttacks( const Player& )
    - deleteAttacks()
}

class Enemy {
    - numEnemies: uint
    - attacksAndProbabilities: map< short, Attack* >
    - MAX_NUM_ENEMIES: static unsigned int
    - MIN_ENEMIES_TO_RAGE: static unsingned int
    + chooseAttack()
    + enrageEnemy( Enemy& )
}

class Attack {
    - name: string
    - damageModifier : double
    - staminaCostModifier : double
    - displayMessage: string
    - DISPLAY_MSG_MAX_SIZE: size_t
    - NAME_MAX_SIZE: size_t
    - DEFAULT_ATTACK_NAME: string
}

class Weapon {
    - name: string
    - damage: double
    - durability: int
    - NAME_MAX_SIZE: const size_t
    - DEFAULT_WEAPON_NAME: string

    + Weapon()
    + Weapon(name: string, damage: double, durability: int)
    + Weapon(const Weapon&)
    + ~Weapon()

    + inflictDamage( double )
    + increaseDurability( double )
    + decreaseDurability( int )
    + printStatus() const
}

class Item
{
    + name: string
    + description: string
    + healQuantity: double
    + MAX_ITEM_STACK: u_int8_t
    + MAX_NAME_SIZE: size_t
    + MAX_DESCRIPTION_SIZE: size_t
    + DEFAULT_ITEM_NAME: string
    + DEFAULT_DESCRIPTION: string
}

Game *-- Player
Game *-- Enemy
Entity <|-- Player
Entity <|-- Enemy
Entity *-- Weapon
Enemy *-- Attack
Player *-- Attack
Item --* Entity
@enduml